manifests/seraphim/prod/prowlarr/HTTPRoute-prowlarr.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: prowlarr
  namespace: prowlarr
spec:
  hostnames:
    - prowlarr.vegapunk.cloud
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: internal
      namespace: gateway
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: oauth2-proxy
          port: 80
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
